# Web-Server-using-HTTP1.1-Protocol

./: CMakeLists.txt  README.md  myconfig.ini
sample_htdocs/: index.html  test.txt  test2.txt
sample_htdocs/subdir1/: index.html
src/: HttpdServer.cc  HttpdServer.hpp  Makefile  client.cpp  mime.types  server-main.cc
